--- a/apps/racers/templates/racers/racer_detail.html
+++ b/apps/racers/templates/racers/racer_detail.html
@@ -22,7 +22,7 @@
             <div class="p-2"><h3>{{ racer.score }}</h3></div>
           </div>
         </div>
-        <div class="separator mb-2">Description</div>
+        <div class="separator mb-2"><h6>Description</h6></div>
         <p class="page_description text-secondary lh-base text-break">
           {{ racer.description|striptags|truncatechars:400 }}
           {% if racer.description|length >= 401 %}
@@ -34,7 +34,7 @@
         {% if racer.description|length >= 401 %}
         <!-- Modal Show Description -->
         <div class="modal fade" id="modal-show-description" tabindex="-1" aria-labelledby="DescriptionModalLabel" aria-hidden="true" data-bs-theme="light">
-          <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="ClearCartModalLabel">Description</h5>
@@ -48,7 +48,7 @@
         </div>
         <!-- ############ -->
         {% endif %}
-        <div class="separator mb-2">Info</div>
+        <div class="separator mb-2"><h6>Info</h6></div>
         <table class="table table-borderless" data-bs-theme="light">
           <tbody>
             <tr>
@@ -57,15 +57,19 @@
             </tr>
             <tr>
               <th scope="row">Car</th>
-              <td><a class="link link-primary text-decoration-none" href="{% url 'cars:car_detail' racer.car.pk %}">{{ racer.car.car_model.name }}, {{ racer.car.color }}</a></td>
+              {% if racer.car %}
+              <td><a class="link link-primary text-decoration-none" href="{{ racer.car.get_absolute_url }}">{{ racer.car.car_model.name }}, {{ racer.car.color }}</a></td>
+              {% else %}
+              <td>None</td>
+              {% endif %}
             </tr>
             <tr>
               <th scope="row">Country</th>
               <td>{{ racer.country }}</td>
             </tr>
             <tr>
-              <th scope="row">Active since</th>
-              <td>{{ racer.active_since }}</td>
+              <th scope="row">Date joined</th>
+              <td>{{ racer.date_joined|date:'F j, Y' }}</td>
             </tr>
             <tr>
               <th scope="row">Year of birth</th>
@@ -77,7 +81,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="separator mb-2">Races</div>
+        <div class="separator mb-2"><h6>Races</h6></div>
         <table class="table" data-bs-theme="light">
           <thead>
             <tr>
@@ -86,7 +90,7 @@
               <th scope="col">Status</th>
             </tr>
           </thead>
-          <tbody class="">
+          <tbody>
             {% for race in racer.race_set.all %}
             <tr>
               <th scope="row"><a class="link link-primary text-decoration-none" href="{{ race.get_absolute_url }}">{{ race.name }}</a></th>
