--- a/apps/cars/templates/cars/car_update.html
+++ b/apps/cars/templates/cars/car_update.html
@@ -6,6 +6,7 @@
   <div class="user_detail">
     <div class="d-flex flex-wrap justify-content-center">
       <div class='user_detail_info ms-5 w-50 mt-5 mb-5'>
+        <h1 class="text-center">Edit</h1>
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {% for field in form %}
