--- a/apps/cars/templates/cars/object_create_base.html
+++ b/apps/cars/templates/cars/object_create_base.html
@@ -10,7 +10,11 @@
         {% for field in form %}
         <div class="mb-3">
           <label class="form-label">{{ field.label_tag }}</label>
+          {% if field.name == 'color' %}
+          {% render_field field class="form-control form-control-color" type="color" %}
+          {% else %}
           {% render_field field class="form-control" %}
+          {% endif %}
           <div class="form-text">{{ field.help_text }}</div>
         </div>
         {% endfor %}
