--- a/apps/racers/templates/racers/login.html
+++ b/apps/racers/templates/racers/login.html
@@ -2,7 +2,7 @@
 {% block title %}Log In{% endblock %}
 {% block content %}
 {% load widget_tweaks %}
-<div class="container mt-5 d-flex justify-content-center user_form">
+<div class="container mt-5 mb-5 d-flex justify-content-center user_form">
   <div class="mt-5">
     <h1 class="mb-3 text-center">Log In</h1>
     <form method="POST">
