--- a/apps/races/templates/races/race_detail.html
+++ b/apps/races/templates/races/race_detail.html
@@ -50,7 +50,7 @@
           {% if not race.completion_date %}
           {% if request.user not in race.racers.all %}
           <form action="{% url 'races:apply_for_race' race.pk %}" method="POST" id="frm_apply"> {% csrf_token %}
-            <a class="btn btn-outline-primary" href="javascript:$('#frm_apply').submit();">Apply</a>
+            <a class="btn btn-outline-success" href="javascript:$('#frm_apply').submit();">Apply</a>
           </form>
           {% else %}
           <form action="{% url 'races:cancel_race' race.pk %}" method="POST" id="frm_cancel"> {% csrf_token %}
