--- a/apps/races/templates/races/race_racers_list.html
+++ b/apps/races/templates/races/race_racers_list.html
@@ -3,27 +3,38 @@
 {% block content %}
 <div class="grey_container">
   <div class="container mt-5 mb-5 w-50">
-    <div class="bd-masthead mt-5" id="content">
+    <div class="user_detail">
+    <div class="bd-masthead mt-5 mb-5 me-5 ms-5" id="content">
       <div class='text-center'>
-        <h1 class="mb-4">{{ race.name }} racers</h1>
+        <h1 class="mb-4">{{ race.name }}
+        {% if not race.completion_date %}
+        <span class="badge bg-success">ACTIVE</span>
+        {% else %}
+        <span class="badge bg-secondary">OVER</span>
+        {% endif %}
+        </h1>
       </div>
-      <div class="list-group mb-5 mt-5">
-        {% for racer in race.racers.all %}
-        <a href="{{ racer.get_absolute_url }}" class="list-group-item list-group-item-action">
-          <div class="d-flex align-middle">
-            <div class="me-auto">
-              <h5 class="mb-1 mt-1">{{ racer.username }} #{{ racer.number }}</h5>
-              <small class="text-muted">{{ racer.first_name }} {{ racer.second_name }}</small>
-            </div>
-            <h4 class="mt-2">
-              <span class="badge rounded-pill bg-dark">{{ racer.score }}</span>
-            </h4>
-          </div>
-        </a>
-        {% empty %}
-        <h4 class="text-danger mt-3 mb-3 text-center">No results found</h4>
-        {% endfor %}
-      </div>
+        <table class="table" data-bs-theme="light">
+          <thead>
+            <tr>
+              <th scope="col" class="text-dark">Position</th>
+              <th scope="col" class="text-dark">Racer</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for entry in race.raceentry_set.all %}
+            <tr>
+              <td class="text-dark">{% if entry.position %}{{ entry.position }}{% else %}-{% endif %}</td>
+              <td>
+                <a href='{% url "racers:racer_detail" entry.racer.pk %}' class="link link-primary text-decoration-none">
+                {{ entry.racer.first_name }} {{ entry.racer.second_name }} ({{ entry.racer.username }}), #{{ entry.racer.number }}
+                </a>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+    </div>
     </div>
   </div>
 </div>
