--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <p class='text-break text-secondary'>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
           </div>
           {% if request.user.is_authenticated %}
-          <a role="button" class="btn btn-outline-danger btn-lg" href="{% url 'races:race_list' %}">Apply for Race</a>
+          <a role="button" class="btn btn-outline-success btn-lg" href="{% url 'races:race_list' %}">Apply for Race</a>
           {% else %}
           <a role="button" class="btn btn-outline-danger btn-lg" href="{% url 'racers:register' %}">Start</a>
           {% endif %}
@@ -27,8 +27,8 @@
           <div class="card create_card">
             <a class="text-decoration-none" href="{% url 'races:completed_race_list' %}">
             <div class="card-body">
-              <h2 class="fa_icon">{{ active_races.count }}</h2>
-              <h2 class="card-title mt-2 card_title">Active<br>Races</h2>
+              <h3 class="fa_icon"><span class="badge bg_yellow">{{ active_races.count }}</span></h3>
+              <h2 class="card-title mt-2 text-dark">Active<br>Races</h2>
             </div>
             </a>
           </div>
@@ -38,8 +38,8 @@
           <div class="card complete_card">
             <a class="text-decoration-none" href="{% url 'racers:racer_list' %}">
             <div class="card-body">
-              <h2 class="fa_icon">{{ racers.count }}</h2>
-              <h2 class="card-title mt-2 card_title">Current<br>Racers</h2>
+              <h3 class="fa_icon"><span class="badge bg_red">{{ racers.count }}</span></h3>
+              <h2 class="card-title mt-2 text-dark">Current<br>Racers</h2>
             </div>
             </a>
           </div>
@@ -49,8 +49,8 @@
           <div class="card edit_card">
             <a class="text-decoration-none" href="{% url 'races:race_list' %}">
             <div class="card-body">
-              <h2 class="fa_icon">{{ completed_races.count }}</h2>
-              <h2 class="card-title mt-2 card_title">Completed<br>Races</h2>
+              <h3 class="fa_icon"><span class="badge bg_blue">{{ completed_races.count }}</span></h3>
+              <h2 class="card-title mt-2 text-dark">Completed<br>Races</h2>
             </div>
             </a>
           </div>
