--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
           {% endif %}
         </div>
       </div>
-      <div class="separator mb-4"><h4>Site Info</h4></div>
+      <div class="separator mb-4"><h4>NASCAR</h4></div>
       <div class="row row-cols-1 row-cols-lg-3 text-center cards_row">
 
         <div class="col card_col">
