--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <p class='text-break text-secondary'>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
           </div>
           {% if request.user.is_authenticated %}
-          <a role="button" class="btn btn-outline-success btn-lg" href="{% url 'races:race_list' %}">Apply for Race</a>
+          <a role="button" class="btn btn-outline-success btn-lg" href="{% url 'races:race_list' %}">Apply for a Race</a>
           {% else %}
           <a role="button" class="btn btn-outline-danger btn-lg" href="{% url 'racers:register' %}">Start</a>
           {% endif %}
