--- a/apps/races/templates/races/race_detail.html
+++ b/apps/races/templates/races/race_detail.html
@@ -9,7 +9,11 @@
         <h3 class="d-flex justify-content-between align-items-center mb-2">
           <span>{{ race.name }}</span>
               {% if not race.completion_date %}
-              <span class="badge bg-success">ACTIVE</span>
+                {% if race.racers.count == race.race_limit %}
+                <span class="badge bg-danger">CLOSED</span>
+                {% else %}
+                <span class="badge bg-success">ACTIVE</span>
+                {% endif %}
               {% else %}
               <span class="badge bg-secondary">OVER</span>
               {% endif %}
