--- a/apps/races/templates/races/races_list_base.html
+++ b/apps/races/templates/races/races_list_base.html
@@ -30,7 +30,11 @@
             </div>
             <h4 class="mt-2">
               {% if not race.completion_date %}
-              <span class="badge bg-success mt-1">ACTIVE</span>
+                {% if race.racers_count == race.race_limit %}
+                <span class="badge bg-danger mt-1">CLOSED</span>
+                {% else %}
+                <span class="badge bg-success mt-1">ACTIVE</span>
+                {% endif %}
               {% else %}
               <span class="badge bg-secondary mt-1">OVER</span>
               {% endif %}
